# neurotrace

./: .gitignore  CHANGELOG.md  LICENSE  NeuroTrace-Explained.md  README.md  pyproject.toml
.genesis/: CURRENT.md  DONE.html  KICKOFF.md  LOOPS.md  PLAN.md  context-graph.json
.genesis/wiki/: index.md
.github/workflows/: ci.yml
docs/: NeuroTrace-Business-Overview.html  architecture.md
docs/screenshots/: README.md
examples/: openai_agent.py  streaming_agent.py
src/neurotrace/: __init__.py  cli.py  redaction.py
src/neurotrace/adapters/: __init__.py  openai.py
src/neurotrace/core/: events.py  storage.py  tracer.py
src/neurotrace/viewer/: __init__.py  render.py  server.py  tree.py
src/neurotrace/viewer/static/: index.html
tests/: test_cli.py  test_events.py  test_openai_adapter.py  test_redaction.py  test_render.py  test_server.py  test_storage.py  test_tracer.py  test_tracer_reliability.py  test_tree.py
