[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "neurotrace"
version = "0.1.0"
description = "A trace debugger/visualizer for AI agent execution — inspect every LLM call, tool call, and decision your agent makes."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.110",
    "uvicorn>=0.29",
    "pydantic>=2.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.scripts]
neurotrace = "neurotrace.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/neurotrace"]
